# GLCraft

./: CMakeLists.txt  README.md
include/: Camera.h  Chunk.h  Crosshair.h  Game.h  Raycast.h  Shader.h  TextRenderer.h  TextureManager.h
src/cpp/: Camera.cpp  Chunk.cpp  Crosshair.cpp  Game.cpp  Raycast.cpp  Shader.cpp  TextRenderer.cpp  TextureManager.cpp  main.cpp
src/glsl/: crosshair.frag  crosshair.vert  shader.frag  shader.vert  text.frag  text.vert
